# plymouth

debian/: changelog  control  plymouth.install  plymouth.links  rules
debian/local/: plymouth.hook  plymouth.init-premount
debian/upstream/: metadata
src/libply/: ply-utils.c
src/libply-splash-core/: ply-renderer.c  ply-renderer.h
src/plugins/renderers/: meson.build
src/plugins/renderers/minui/: meson.build
systemd-units/: meson.build  plymouth-start.service.in
